@@ -22,6 +22,9 @@ Styles and game modes:
  + Construction Mode: Add subtle glow to healing station
  + Construction Mode: Change message colors
  + Construction Mode: Allow to change "Switch Hedgehog" in weapon scheme
+ + Racer, Tech Racer: First waypoint flashes before the hog starts moving
+ + Racer: Use dark waypoints in bright themes like Bath
+ + Racer, Tech Racer: Various other waypoint appearance improvements
  * Construction Mode: Remove mine strike if added by weapon scheme (it's broken)
 
 A Space Adventure:
